2006-02-19    <jeff@mini.nerble.net>

	* tools/wud.cc: Rewrote in C++.  Uses symbol table.
	* usecode/ucsymtbl.cc (Usecode_symbol_table): Support symbol-table
	in compiled usecode.
	* usecode/ucinternal.cc:  Print function names from symbol table.
	* usecode/compiler/ucmain.cc:  Write out symbol table.

2006-02-13  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* combat.cc, ready.h: Make missile weapons really use actual ammo.
	  Triple crossbows now fire magic bolts as they should. They also
	  spend the correct amount of ammo (3) per shot.
	* chunks.cc: Fixed a few dumb mistakes from previous commit.
	* objs/animate.cc: Fixed sound effects in SI, which I had broken
	  previously.

2006-02-12  Marzo Sette Torres Junior <marzojr@yahoo.com>
	Round 1 of de-hard-coding data from Exult.
	* actors.cc: Added support for custom BG-style gumps. Eliminated
	  the hard-coded data about which items get usecode ready/unready
	  events.
	* bggame.cc, sigame.cc: Two new resources in the respective flx
	  files.
	* cheat.cc, cheat_screen.cc: NPCs with mana should recover/be able
	* data/*/*: New de-hard-coded data, and mpdified flx.in files to
	  add them to the correct game flx file.
	* effects.cc: The association shape <> explosion sprite has been
	  moved out.
	* files/msgfile.cc: Lines starting with a ':' will be sequentially
	  auto-indexed.
	* gumps/Face_button.cc, Face_stats.cc: Removed restrictions on
	  which NPCs display faces in the status bar. Also, NPCs with
	  non-zero magic will display a mana bar.
	* gumps/Gump_manager.cc, Gump_manager.h, Paperdoll_gump.h: Added
	  support for BG-style gumps.
	* gumps/Paperdoll_gump.cc: Removed references to old paperdoll
	  data from the file.
	* gumps/Paperdoll_gump_info.cc: Externalized all paperdoll data.
	* keyactions.cc: Support for custom BG-style gumps.
	* server/server.cc, mapedit/exult_studio.glade, npcedit.cc: Added
	  the ability to display an actor's gump from the edit window.