@@ -1,3 +1,7 @@
+2006-02-20    <jeff@mini.nerble.net>
+
+	* objs/egg.cc,etc:  Support shapes >= 1024 in monster eggs.
+
 2006-02-19    <jeff@mini.nerble.net>
 
 	* tools/wud.cc: Rewrote in C++.  Uses symbol table.
